# NEXTSim

./: CMakeLists.txt  README.md
cloversim/: CMakeLists.txt
cloversim/gammaSource/: 137Cs.txt  60Co.txt
cloversim/include/: CloverSimActionInitialization.hh  CloverSimDetector.hh  CloverSimDetectorConstruction.hh  CloverSimEventAction.hh  CloverSimHit.hh  CloverSimLinkDef.hh  CloverSimParticleSourceMessenger.hh  CloverSimRunAction.hh  CloverSimTreeData.hh  ImplantedGammaSourceGeneratorAction.hh  PointGammaSourceGeneratorAction.hh  (+1 more)
cloversim/source/: CMakeLists.txt  CloverSimActionInitialization.cc  CloverSimDetector.cpp  CloverSimDetectorConstruction.cc  CloverSimEventAction.cc  CloverSimHit.cc  CloverSimParticleSourceMessenger.cc  CloverSimRunAction.cc  GSource4G4.cpp  PointGammaSourceGeneratorAction.cc  VANDLE18ImplantedGammaSourceGeneratorAction.cc  cloverSim.cc
include/: TraceFitter.hpp  nDetConstruction.hh  nDetDataPack.hh  nDetMaterials.hh  nDetRunAction.hh  nDetWorld.hh
mac/: clover.mac
olaInclude/: CloverQuadBuchDetector.hh  CloverQuadDetector.hh  CloverSingleBuchDetector.hh  CloverSingleDetector.hh
source/: CERNSupport.cc  CMakeLists.txt  CloverQuadBuchDetector.cc  CloverQuadDetector.cc  CloverSingleBuchDetector.cc  CloverSingleBuchSD.cc  CloverSingleDetector.cc  CloverSingleSD.cc  Polyhedron.cc  RIKENFloor.cc  RIKENSupport.cc  TraceFitter.cc  nDetConstruction.cc  nDetDataPack.cc  nDetDetector.cc  nDetMaterials.cc  nDetMaterialsMessenger.cc  nDetParticleSource.cc  nDetRunAction.cc  nDetWorld.cc  nDetWorldMessenger.cc  pmtResponse.cc
(+77 files in other folders)
